--- a/views/bucket.ejs
+++ b/views/bucket.ejs
@@ -3,90 +3,164 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bucket - <%= bucketName %></title>
+    <title>Inventory</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
     <style>
-        .modal-body img, .modal-body iframe {
-            max-width: 100%;
-            height: auto;
-        }
+      body {
+        background-image: radial-gradient(#f2f2f2 20%, transparent 20%),
+          radial-gradient(#f2f2f2 20%, transparent 20%);
+        background-size: 50px 50px;
+        background-position: 0 0, 25px 25px;
+        height: 100vh;
+        margin: 0;
+      }
+      .fas {
+        color: #797979;
+      }
+      .modal-body img,
+      .modal-body iframe {
+        max-width: 100%;
+        height: auto;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
+    <header
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-light"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"
+      >
+        <svg class="bi me-2" width="40" height="32">
+          <use href="#bootstrap" />
+        </svg>
+        <span class="fs-4">Inventory</span>
+      </a>
+    </header>
     <div class="container">
-        <h1 class="my-4">Objects in Bucket: <%= bucketName %></h1>
-        <ul class="list-group">
-            <% objects.forEach(object => { %>
-                <li class="list-group-item">
-                    <% if (object.name.endsWith('.pdf')) { %>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#previewModal" data-file-url="<%= object.presignedUrl %>" data-file-type="pdf"><%= object.name %> (PDF)</a>
-                    <% } else if (object.name.endsWith('.png') || object.name.endsWith('.jpg') || object.name.endsWith('.jpeg')) { %>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#previewModal" data-file-url="<%= object.presignedUrl %>" data-file-type="image"><%= object.name %> (Image)</a>
-                    <% } else { %>
-                        <a href="<%= object.presignedUrl %>" download><%= object.name %> (File)</a>
-                    <% } %>
-                </li>
-            <% }); %>
-        </ul>
-    </div>
-
-    <!-- Preview Modal -->
-    <div class="modal modal-lg fade" id="previewModal" tabindex="-1" aria-labelledby="previewModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="previewModalLabel">Preview</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div id="pdfContainer" style="display: none;">
-                        <iframe src="" frameborder="0" style="width: 100%; height: 500px;"></iframe>
-                    </div>
-                    <div id="imageContainer" style="display: none;">
-                        <img src="" alt="Image Preview">
-                    </div>
-                </div>
-            </div>
+      <div class="card">
+        <div class="card-header">List <%= bucketName %></div>
+        <div class="card-body">
+          <div class="list-group">
+            <% objects.forEach(object => { %> <% if
+            (object.name.endsWith('.pdf')) { %>
+            
+            <a
+              href="#"
+              data-bs-toggle="modal"
+              class="list-group-item list-group-item-action"
+              data-bs-target="#previewModal"
+              data-file-url="<%= object.presignedUrl %>"
+              data-file-type="pdf"
+              ><i class="fas fa-file-pdf"></i> <%= object.name %> (PDF)</a
+            >
+            <% } else if (object.name.endsWith('.png') ||
+            object.name.endsWith('.jpg') || object.name.endsWith('.jpeg')) { %>
+            
+            <a
+              href="#"
+              data-bs-toggle="modal"
+              class="list-group-item list-group-item-action"
+              data-bs-target="#previewModal"
+              data-file-url="<%= object.presignedUrl %>"
+              data-file-type="image"
+              ><i class="fas fa-image"></i> <%= object.name %> (Image)</a
+            >
+            <% } else { %>
+            
+            <a
+              href="<%= object.presignedUrl %>"
+              class="list-group-item list-group-item-action"
+              download
+              ><i class="fas fa-file"></i> <%= object.name %> (File)</a
+            >
+            <% } %> <% }); %>
+          </div>
         </div>
+      </div>
     </div>
-
+    <!-- Preview Modal -->
+    <div
+      class="modal modal-lg fade"
+      id="previewModal"
+      tabindex="-1"
+      aria-labelledby="previewModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="previewModalLabel">Preview</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div id="pdfContainer" style="display: none">
+              <iframe
+                src=""
+                frameborder="0"
+                style="width: 100%; height: 500px"
+              ></iframe>
+            </div>
+            <div id="imageContainer" style="display: none">
+              <img src="" alt="Image Preview" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"
-  ></script>   
-   
-  <script>
-        // Set the src of the modal content based on file type
-        var previewModal = document.getElementById('previewModal');
-        previewModal.addEventListener('show.bs.modal', function (event) {
-            var button = event.relatedTarget; // Button that triggered the modal
-            var fileUrl = button.getAttribute('data-file-url'); // Extract info from data-* attributes
-            var fileType = button.getAttribute('data-file-type'); // Extract file type
-            var pdfContainer = document.getElementById('pdfContainer');
-            var imageContainer = document.getElementById('imageContainer');
-            var iframe = pdfContainer.querySelector('iframe');
-            var img = imageContainer.querySelector('img');
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      // Set the src of the modal content based on file type
+      var previewModal = document.getElementById("previewModal");
+      previewModal.addEventListener("show.bs.modal", function (event) {
+        var button = event.relatedTarget; // Button that triggered the modal
+        var fileUrl = button.getAttribute("data-file-url"); // Extract info from data-* attributes
+        var fileType = button.getAttribute("data-file-type"); // Extract file type
+        var pdfContainer = document.getElementById("pdfContainer");
+        var imageContainer = document.getElementById("imageContainer");
+        var iframe = pdfContainer.querySelector("iframe");
+        var img = imageContainer.querySelector("img");
 
-            if (fileType === 'pdf') {
-                pdfContainer.style.display = 'block';
-                imageContainer.style.display = 'none';
-                iframe.src = fileUrl;
-            } else if (fileType === 'image') {
-                pdfContainer.style.display = 'none';
-                imageContainer.style.display = 'block';
-                img.src = fileUrl;
-            }
-        });
-    </script>
-
-    
-    
+        if (fileType === "pdf") {
+          pdfContainer.style.display = "block";
+          imageContainer.style.display = "none";
+          iframe.src = fileUrl;
+        } else if (fileType === "image") {
+          pdfContainer.style.display = "none";
+          imageContainer.style.display = "block";
+          img.src = fileUrl;
+        }
+      });
     </script>
   </body>
 </html>
