--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - List Buckets</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inventory</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <style>
+      body {
+        background-image: radial-gradient(#f2f2f2 20%, transparent 20%),
+          radial-gradient(#f2f2f2 20%, transparent 20%);
+        background-size: 50px 50px;
+        background-position: 0 0, 25px 25px;
+        height: 100vh;
+        margin: 0;
+      }
+      .fas.fa-folder {
+        color: #797979;
+      }
+    </style>
+  </head>
+  <body>
+    <header
+      class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-light"
+    >
+      <a
+        href="/"
+        class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none"
+      >
+        <svg class="bi me-2" width="40" height="32">
+          <use href="#bootstrap" />
+        </svg>
+        <span class="fs-4">Inventory</span>
+      </a>
+    </header>
     <div class="container">
-        <h1 class="my-4">MinIO Buckets</h1>
-        <ul class="list-group">
+      <div class="card">
+        <div class="card-header">List Buckets</div>
+        <div class="card-body">
+          <div class="list-group">
             <% buckets.forEach(bucket => { %>
-                <li class="list-group-item">
-                    <a href="/bucket/<%= bucket.name %>"><%= bucket.name %></a> - Created on <%= new Date(bucket.creationDate).toLocaleDateString() %>
-                </li>
+            <a
+              href="/bucket/<%= bucket.name %>"
+              class="list-group-item list-group-item-action"
+              ><i class="fas fa-folder" aria-hidden="true"></i> <%= bucket.name
+              %></a
+            >
             <% }); %>
-        </ul>
+          </div>
+        </div>
+      </div>
     </div>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
